--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Hectswap Interface",
   "homepage": ".",
   "private": true,
+  "homepage": "https://hecocoin.github.io/Hectswap",
   "devDependencies": {
     "@ethersproject/experimental": "^5.0.1",
     "@popperjs/core": "^2.4.4",
